# es-chatbot

./: .docker.ignore  .env.example  .gitignore  API_ENDPOINTS_DOCUMENTATION.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  nixpacks.toml  pyproject.toml
.github/workflows/: deploy.yml
app/: app.py
app/config/: database.py  settings.py
app/models/: anonymous_question.py  chat_history.py  chat_statistics.py  document.py  question.py  user.py
app/routers/: anonymous_questions.py  chat_history.py  chat_router.py  chat_statistics.py  questions.py
app/routers/auth/: router.py
app/routers/document/: router.py
app/routers/llm/: router.py
app/routers/user/: router.py
app/schemas/: anonymous_question.py  chat.py  chat_history.py  chat_statistics.py  document.py  error.py  question.py  user.py
app/services/anonymous_questions/: __init__.py  anonymous_question_service.py  test_agent_examples.py  topic_classification_agent.py
app/services/chat_history/: __init__.py  create_chat_history_use_case.py  delete_chat_history_use_case.py  get_chat_history_use_case.py  service.py  update_chat_history_use_case.py
app/services/chat_statistics/: __init__.py  chat_statistics_service.py
app/services/documents/: create_document_use_case.py  delete_all_documents_use_case.py  delete_document_use_case.py  document_service.py  get_all_documents_use_case.py
app/services/llm/: llm_service.py
app/services/questions/: create_question_use_case.py  delete_question_use_case.py  get_question_use_case.py  list_questions_use_case.py  update_question_use_case.py
app/services/rag/: rag_service.py
app/services/users/: create_user_use_case.py  get_user_by_email_use_case.py  get_users_use_case.py  update_user_role_use_case.py
app/utils/: google_drive.py  security.py  timezone.py
architecture/: goals.excalidraw
docs/: README_BUSINESS_RULES.md  anonymous_questions_usage.md  business_rules_anonymous_questions.md  business_rules_auth.md  business_rules_chat.md  business_rules_chat_history.md  business_rules_chat_statistics.md  business_rules_documents.md  business_rules_llm.md  business_rules_users.md
migrations/: env.py
migrations/versions/: 0e39102ca17b_add_document_table.py  2d994da7efc9_add_user_role.py  360362fde543_update_datetime_stats.py  4d93feeff112_converter_todos_os_ids_para_string.py  51ced48f7839_add_chat_history_table.py  59bf68492e27_create_questions_table.py  8c9b4463f684_add_questions.py  918426f880fa_edit_document_folder_id_unique_field.py  a739e7d72745_add_chat_statistics_table.py  ced3a3ed742b_add_chat_history.py  de5c7aa5c029_create_users_table.py  e6ecd5ab66d9_add_nullable_column_in_user.py  ea26c463d435_add_avatar_url_user.py  initial_migration.py
scripts/: list_tables.py
